--- a/assets/stylesheets/sass/website/_nav.scss
+++ b/assets/stylesheets/sass/website/_nav.scss
@@ -41,7 +41,7 @@
       h1 {
         @include media($small-screen) {
           position: relative;
-          top: -12px;
+          top: -9px;
           font-size: .4em;
         }
         position: relative;
