--- a/assets/stylesheets/sass/website/_styles.scss
+++ b/assets/stylesheets/sass/website/_styles.scss
@@ -208,6 +208,7 @@ div.service-groups {
 
   i {
     padding: .5em 0;
+    color: $codemancode;
   }
   h4 {
     font-size: 1em;
